--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,119 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 14)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 15)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Marcus Mariota         </td><td><font size=3>1215</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Andy Dalton            </td><td><font size=3>1125</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Matt Ryan              </td><td><font size=3>1050</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 965</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Davis Mills            </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Mac Jones              </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 730</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 685</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>PJ Walker              </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Andy Dalton            </td><td><font size=3>1250</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Marcus Mariota         </td><td><font size=3>1215</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Matt Ryan              </td><td><font size=3>1075</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Davis Mills            </td><td><font size=3> 980</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 965</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 815</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Mac Jones              </td><td><font size=3> 755</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>PJ Walker              </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 285</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3> 745</td></tr>
 <tr><td><font size=3>Clyde Edwards-Helaire  </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3> 430</td></tr>
 <tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Eno Benjamin           </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Marlon Mack            </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Kene Nwangwu           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Deon Jackson           </td><td><font size=3> 190</td></tr>
 <tr><td><font size=3>Justin Jackson         </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Chase Edmonds          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Marlon Mack            </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Melvin Gordon          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Tevin Coleman          </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Deon Jackson           </td><td><font size=3> 115</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Zay Jones              </td><td><font size=3> 685</td></tr>
+<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 630</td></tr>
 <tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 600</td></tr>
-<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 580</td></tr>
 <tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 550</td></tr>
 <tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 465</td></tr>
+<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 515</td></tr>
 <tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3> 455</td></tr>
 <tr><td><font size=3>Marquise Goodwin       </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 445</td></tr>
-<tr><td><font size=3>Zay Jones              </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Noah Brown             </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>Quez Watkins           </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>DJ Chark               </td><td><font size=3> 390</td></tr>
+<tr><td><font size=3>KJ Osborn              </td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>Laviska Shenault       </td><td><font size=3> 370</td></tr>
 <tr><td><font size=3>Nick Westbrook-Ikhine  </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3> 350</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Evan Engram            </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 245</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Hayden Hurst           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Noah Fant              </td><td><font size=3> 145</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Evan Engram            </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Brock Wright           </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Noah Fant              </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Hayden Hurst           </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>CJ Uzomah              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>1100</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3>1075</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>1050</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>1025</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1010</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>1005</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 860</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 855</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 830</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 820</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 805</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 750</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3>1205</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1190</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>1140</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>1140</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>1085</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3>1080</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 960</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 915</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 910</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 875</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 840</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 820</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 820</td></tr>
 <tr><td><font size=3>Matthew Wright         </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 565</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 660</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 580</td></tr>
 <tr><td><font size=3>Marcus Jones           </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>Jelani Woods           </td><td><font size=3> 245</td></tr>
 <tr><td><font size=3>Daniel Bellinger       </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Chigoziem Okonkwo      </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Peyton Hendershot      </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Cade Otton             </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Jalen Virgil           </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Raheem Blackshear      </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Malik Davis            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jake Ferguson          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Teagan Quitoriano      </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Kevin Harris           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Peyton Hendershot      </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Zander Horvath         </td><td><font size=3> 100</td></tr>
 </table>
 </td></tr></table>
