--- a/pickups.html
+++ b/pickups.html
@@ -42,8 +42,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Evan Engram/Robert Tonyan</td>
+<td width=50>12/21</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -234,8 +234,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Zay Jones/Isaiah Likely</td>
+<td width=50>12/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -347,7 +347,8 @@ States - Zamir White/Nick Sciba (11/29)<br>
 Grant - Jordan Mason/Darnell Mooney (11/30)<br>
 Sam - Mike White/Clyde Edwards-Helaire (11/30)<br>
 Grant - Tyler Conklin/Kyle Pitts (12/4)<br>
-Randy - Darius Slayton/Caleb Shudak (12/14)
+Randy - Darius Slayton/Caleb Shudak (12/14)<br>
+Roger - Jerick McKinnon/Jonathan Taylor (12/21)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
