--- a/roster.html
+++ b/roster.html
@@ -10,10 +10,10 @@
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td> SF</td><td>Elijah Mitchell        </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
+<tr><td> KC</td><td>Jerick McKinnon        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td>ARI</td><td>Marquise Brown         </td></tr>
@@ -21,8 +21,8 @@
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
-<tr><td> GB</td><td>Robert Tonyan          </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
+<tr><td>JAX</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
@@ -192,6 +192,7 @@
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td>LAC</td><td>Josh Palmer            </td></tr>
+<tr><td>JAX</td><td>Zay Jones              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
@@ -201,7 +202,6 @@
 <tr><td>SEA</td><td>Ken Walker             </td></tr>
 <tr><td>ATL</td><td>Desmond Ridder         </td></tr>
 <tr><td> NE</td><td>Bailey Zappe           </td></tr>
-<tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 </table>
 </td>
 <td valign=top>
