--- a/pickups.html
+++ b/pickups.html
@@ -286,7 +286,7 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Tristan Ebner/Hayden Hurst</td>
+<td width=370>Trestan Ebner/Hayden Hurst</td>
 <td width=50>11/18</td>
 </tr></table></td>
 <td><table><tr>
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Gardner Minshew/Trestan Ebner</td>
+<td width=50>12/22</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
