--- a/roster.html
+++ b/roster.html
@@ -237,6 +237,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Steven (9)</b></font></td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
 <tr><td> GB</td><td>Aaron Rodgers          </td></tr>
+<tr><td>PHI</td><td>Gardner Minshew        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>NYJ</td><td>Michael Carter         </td></tr>
@@ -257,7 +258,6 @@
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
 <tr><td>TEN</td><td>Treylon Burks          </td></tr>
-<tr><td>CHI</td><td>Tristan Ebner          </td></tr>
 </table>
 </td>
 </tr>
