--- a/week16.html
+++ b/week16.html
@@ -13,7 +13,7 @@
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -21,14 +21,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,7 +111,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knight</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
@@ -132,19 +132,19 @@
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Willis</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
