--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -75,41 +76,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
     <td><font size=2>12</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>10285</font></td>
-    <td><font size=2>7490</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>10780</font></td>
+    <td><font size=2>8400</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>9180</font></td>
-    <td><font size=2>8480</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>9785</font></td>
+    <td><font size=2>9275</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9420</font></td>
-    <td><font size=2>9540</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>9675</font></td>
+    <td><font size=2>10035</font></td>
     <td><font size=2>975</font></td>
-    <td><font size=2>265</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>9080</font></td>
-    <td><font size=2>9170</font></td>
+    <td><font size=2>9575</font></td>
+    <td><font size=2>9425</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7715</font></td>
-    <td><font size=2>8575</font></td>
+    <td><font size=2>8510</font></td>
+    <td><font size=2>9180</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -123,41 +124,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>10000</font></td>
-    <td><font size=2>9820</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>10385</font></td>
+    <td><font size=2>10370</font></td>
     <td><font size=2>1280</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>4</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9280</font></td>
-    <td><font size=2>9095</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>270</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8160</font></td>
-    <td><font size=2>9705</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8710</font></td>
+    <td><font size=2>10090</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8865</font></td>
-    <td><font size=2>8060</font></td>
+    <td><font size=2>9775</font></td>
+    <td><font size=2>8555</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>190</font></td>
+    <td><font size=2>3</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>9745</font></td>
+    <td><font size=2>9850</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>270</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8630</font></td>
-    <td><font size=2>10680</font></td>
+    <td><font size=2>9385</font></td>
+    <td><font size=2>11145</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
     <td><font size=2>1</font></td>
