--- a/pickups.html
+++ b/pickups.html
@@ -59,8 +59,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Noah Fant/DeVante Parker</td>
+<td width=50>12/28</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -348,7 +348,8 @@ Grant - Jordan Mason/Darnell Mooney (11/30)<br>
 Sam - Mike White/Clyde Edwards-Helaire (11/30)<br>
 Grant - Tyler Conklin/Kyle Pitts (12/4)<br>
 Randy - Darius Slayton/Caleb Shudak (12/14)<br>
-Roger - Jerick McKinnon/Jonathan Taylor (12/21)
+Roger - Jerick McKinnon/Jonathan Taylor (12/21)<br>
+Sam - Cameron Dicker/Kyler Murray (12/27)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
