--- a/roster.html
+++ b/roster.html
@@ -48,9 +48,9 @@
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
-<tr><td> NE</td><td>DeVante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
+<tr><td>SEA</td><td>Noah Fant              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -93,7 +93,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td>NYJ</td><td>Mike White             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -112,6 +111,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
+<tr><td>LAC</td><td>Cameron Dicker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
