--- a/week17.html
+++ b/week17.html
@@ -8,7 +8,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>McKinnon</td>      <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
@@ -129,8 +129,8 @@
 <tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Willis</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
