--- a/roster.html
+++ b/roster.html
@@ -136,12 +136,12 @@
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Tyler Conklin          </td></tr>
+<tr><td> NO</td><td>Juwan Johnson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
-<tr><td>DEN</td><td>Greg Dulcich           </td></tr>
 <tr><td> GB</td><td>Christian Watson       </td></tr>
 <tr><td> SF</td><td>Jordan Mason           </td></tr>
 </table>
