--- a/week17.html
+++ b/week17.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>GSmith</td>        <td></td><td align=right>100</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>25</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>60</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>60</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
@@ -86,9 +86,9 @@
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JJohnson</td>      <td></td><td align=right>30</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>105</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>100</td></tr>
 <tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>355</td></tr>
+<tr><td></td>              <td></td><td align=right>350</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8865</font></td>
+    <td><font size=2>8860</font></td>
     <td><font size=2>9180</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
