--- a/roster.html
+++ b/roster.html
@@ -229,7 +229,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
-<tr><td>DET</td><td>Jameson Williams       </td></tr>
+<tr><td>MIA</td><td>Skylar Thompson        </td></tr>
 </table>
 </td>
 <td valign=top>
