--- a/pickups.html
+++ b/pickups.html
@@ -251,8 +251,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Skylar Thompson/Jameson Williams</td>
+<td width=50>1/3</td>
 </tr></table></td>
 </tr>
 <tr>
