--- a/roster.html
+++ b/roster.html
@@ -110,12 +110,12 @@
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
-<tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td>LAC</td><td>Cameron Dicker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
+<tr><td>WAS</td><td>Sam Howell             </td></tr>
 </table>
 </td>
 <td valign=top>
