--- a/pickups.html
+++ b/pickups.html
@@ -111,8 +111,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Sam Howell/Wil Lutz</td>
+<td width=50>1/4</td>
 </tr></table></td>
 </tr>
 <tr>
