--- a/week18.html
+++ b/week18.html
@@ -21,9 +21,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>MWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DJones (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>0</td></tr>
+<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
