--- a/week18.html
+++ b/week18.html
@@ -38,7 +38,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>GSmith</td>        <td></td><td align=right>125</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>50</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>175</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
@@ -112,7 +112,7 @@
 <tr><td>Cousins (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>DCook (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>30</td></tr>
-<tr><td>Samuel (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DSamuel (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Waddle (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>100</td></tr>
 <tr><td>Succop (D)</td>    <td></td><td align=right>***</td></tr>
