--- a/week18.html
+++ b/week18.html
@@ -7,29 +7,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Burrow (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Burrow (D)</td>    <td></td><td align=right>130</td></tr>
 <tr><td>McKinnon</td>      <td></td><td align=right>50</td></tr>
-<tr><td>Fournette (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Fournette (D)</td> <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Godwin (D)</td>    <td></td><td align=right>40</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>25</td></tr>
 <tr><td>Pacheco</td>       <td></td><td align=right>80</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>325</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>DJones (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>McCaffrey (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>DJones (D)</td>    <td></td><td align=right>185</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>105</td></tr>
 <tr><td>NHarris</td>       <td></td><td align=right>90</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>35</td></tr>
 <tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>McPherson (D)</td> <td></td><td align=right>35</td></tr>
 <tr><td>Pickett</td>       <td></td><td align=right>80</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>530</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -95,29 +95,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Herbert (D)</td>   <td></td><td align=right>80</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>55</td></tr>
-<tr><td>Aiyuk (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Aiyuk (D)</td>     <td></td><td align=right>35</td></tr>
 <tr><td>ZJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Tucker (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Andrews (D)</td>   <td></td><td align=right>35</td></tr>
+<tr><td>Tucker (D)</td>    <td></td><td align=right>30</td></tr>
 <tr><td>Ridder</td>        <td></td><td align=right>80</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>315</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Cousins (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>DCook (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Cousins (D)</td>   <td></td><td align=right>165</td></tr>
+<tr><td>DCook (D)</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>30</td></tr>
-<tr><td>DSamuel (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Waddle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DSamuel (D)</td>   <td></td><td align=right>190</td></tr>
+<tr><td>Waddle (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>100</td></tr>
-<tr><td>Succop (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Succop (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Thompson</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>515</td></tr>
 </table>
 </td>
 </tr>
@@ -142,12 +142,12 @@
 <tr><td>Goff</td>          <td></td><td align=right>30</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>25</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>50</td></tr>
-<tr><td>Lamb (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Lamb (D)</td>      <td></td><td align=right>105</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>140</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>115</td></tr>
-<tr><td>Purdy (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td>Purdy (D)</td>     <td></td><td align=right>285</td></tr>
+<tr><td></td>              <td></td><td align=right>750</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -177,15 +177,15 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>10180</font></td>
+    <td><font size=2>10505</font></td>
     <td><font size=2>9275</font></td>
     <td><font size=2>845</font></td>
-    <td><font size=2>395</font></td>
+    <td><font size=2>325</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10150</font></td>
+    <td><font size=2>10465</font></td>
     <td><font size=2>10035</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>255</font></td>
@@ -204,7 +204,7 @@
     <td><font size=2>9105</font></td>
     <td><font size=2>9180</font></td>
     <td><font size=2>850</font></td>
-    <td><font size=2>260</font></td>
+    <td><font size=2>245</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>11055</font></td>
+    <td><font size=2>11585</font></td>
     <td><font size=2>10370</font></td>
     <td><font size=2>1280</font></td>
     <td><font size=2>335</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10055</font></td>
+    <td><font size=2>10570</font></td>
     <td><font size=2>8555</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>190</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9890</font></td>
+    <td><font size=2>10640</font></td>
     <td><font size=2>11145</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
