--- a/leader.html
+++ b/leader.html
@@ -8,18 +8,18 @@
 <tr><td><font size=3>1)</td><td><font size=3>Josh Allen             </td><td><font size=3>3260</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Jalen Hurts            </td><td><font size=3>3130</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Patrick Mahomes        </td><td><font size=3>3055</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Joe Burrow             </td><td><font size=3>2895</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Joe Burrow             </td><td><font size=3>3025</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Geno Smith             </td><td><font size=3>2395</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Justin Fields          </td><td><font size=3>2360</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>2100</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>2265</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3>2080</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3>1935</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jared Goff             </td><td><font size=3>1910</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Derek Carr             </td><td><font size=3>1880</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tom Brady              </td><td><font size=3>1860</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1840</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Daniel Jones           </td><td><font size=3>1825</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Justin Herbert         </td><td><font size=3>1805</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Daniel Jones           </td><td><font size=3>2010</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3>1935</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jared Goff             </td><td><font size=3>1910</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Justin Herbert         </td><td><font size=3>1885</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Derek Carr             </td><td><font size=3>1880</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tom Brady              </td><td><font size=3>1860</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1840</td></tr>
 <tr><td><font size=3>16)</td><td><font size=3>Lamar Jackson          </td><td><font size=3>1725</td></tr>
 <tr><td><font size=3>17)</td><td><font size=3>Dak Prescott           </td><td><font size=3>1665</td></tr>
 <tr><td><font size=3>18)</td><td><font size=3>Russell Wilson         </td><td><font size=3>1605</td></tr>
@@ -49,9 +49,9 @@
 <tr><td><font size=3>Nick Chubb             </td><td><font size=3>1865</td></tr>
 <tr><td><font size=3>Tony Pollard           </td><td><font size=3>1855</td></tr>
 <tr><td><font size=3>Derrick Henry          </td><td><font size=3>1750</td></tr>
-<tr><td><font size=3>Christian McCaffrey    </td><td><font size=3>1605</td></tr>
+<tr><td><font size=3>Christian McCaffrey    </td><td><font size=3>1710</td></tr>
 <tr><td><font size=3>Jamaal Williams        </td><td><font size=3>1540</td></tr>
-<tr><td><font size=3>Dalvin Cook            </td><td><font size=3>1410</td></tr>
+<tr><td><font size=3>Dalvin Cook            </td><td><font size=3>1440</td></tr>
 <tr><td><font size=3>Miles Sanders          </td><td><font size=3>1365</td></tr>
 <tr><td><font size=3>Saquon Barkley         </td><td><font size=3>1335</td></tr>
 <tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3>1095</td></tr>
@@ -88,16 +88,17 @@
 <tr><td><font size=3>AJ Brown               </td><td><font size=3>1675</td></tr>
 <tr><td><font size=3>Stefon Diggs           </td><td><font size=3>1555</td></tr>
 <tr><td><font size=3>Justin Jefferson       </td><td><font size=3>1455</td></tr>
+<tr><td><font size=3>CeeDee Lamb            </td><td><font size=3>1355</td></tr>
 <tr><td><font size=3>Jaylen Waddle          </td><td><font size=3>1325</td></tr>
 <tr><td><font size=3>Ja'Marr Chase          </td><td><font size=3>1285</td></tr>
 <tr><td><font size=3>Tyler Lockett          </td><td><font size=3>1265</td></tr>
-<tr><td><font size=3>CeeDee Lamb            </td><td><font size=3>1250</td></tr>
 <tr><td><font size=3>Amari Cooper           </td><td><font size=3>1220</td></tr>
 <tr><td><font size=3>DeVonta Smith          </td><td><font size=3>1045</td></tr>
 <tr><td><font size=3>Cooper Kupp            </td><td><font size=3>1015</td></tr>
 <tr><td><font size=3>Tee Higgins            </td><td><font size=3>1005</td></tr>
-<tr><td><font size=3>Brandon Aiyuk          </td><td><font size=3> 960</td></tr>
+<tr><td><font size=3>Brandon Aiyuk          </td><td><font size=3> 995</td></tr>
 <tr><td><font size=3>Christian Kirk         </td><td><font size=3> 950</td></tr>
+<tr><td><font size=3>Deebo Samuel           </td><td><font size=3> 940</td></tr>
 <tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 935</td></tr>
 <tr><td><font size=3>Mike Evans             </td><td><font size=3> 935</td></tr>
 <tr><td><font size=3>Jerry Jeudy            </td><td><font size=3> 930</td></tr>
@@ -106,18 +107,17 @@
 <tr><td><font size=3>DJ Moore               </td><td><font size=3> 885</td></tr>
 <tr><td><font size=3>DK Metcalf             </td><td><font size=3> 855</td></tr>
 <tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 760</td></tr>
-<tr><td><font size=3>Deebo Samuel           </td><td><font size=3> 750</td></tr>
 <tr><td><font size=3>Allen Lazard           </td><td><font size=3> 715</td></tr>
 <tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 705</td></tr>
 <tr><td><font size=3>Zay Jones              </td><td><font size=3> 685</td></tr>
 <tr><td><font size=3>Mike Williams          </td><td><font size=3> 685</td></tr>
 <tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 675</td></tr>
 <tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Chris Godwin           </td><td><font size=3> 630</td></tr>
 <tr><td><font size=3>Michael Pittman        </td><td><font size=3> 630</td></tr>
 <tr><td><font size=3>Keenan Allen           </td><td><font size=3> 605</td></tr>
 <tr><td><font size=3>JuJu Smith-Schuster    </td><td><font size=3> 605</td></tr>
 <tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 600</td></tr>
-<tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 595</td></tr>
 </table>
 </td></tr><tr><td><br><br><br><br></td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -125,8 +125,8 @@
 <tr><td><font size=3>1)</td><td><font size=3>Travis Kelce           </td><td><font size=3>1415</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Taysom Hill            </td><td><font size=3>1200</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>George Kittle          </td><td><font size=3>1155</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>TJ Hockenson           </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Mark Andrews           </td><td><font size=3> 665</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Mark Andrews           </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>TJ Hockenson           </td><td><font size=3> 680</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Cole Kmet              </td><td><font size=3> 645</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 635</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Evan Engram            </td><td><font size=3> 580</td></tr>
@@ -164,10 +164,10 @@
 <tr><td><font size=3>Daniel Carlson         </td><td><font size=3>1480</td></tr>
 <tr><td><font size=3>Brett Maher            </td><td><font size=3>1405</td></tr>
 <tr><td><font size=3>Graham Gano            </td><td><font size=3>1400</td></tr>
+<tr><td><font size=3>Justin Tucker          </td><td><font size=3>1390</td></tr>
 <tr><td><font size=3>Younghoe Koo           </td><td><font size=3>1375</td></tr>
 <tr><td><font size=3>Jason Myers            </td><td><font size=3>1375</td></tr>
 <tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>1375</td></tr>
-<tr><td><font size=3>Justin Tucker          </td><td><font size=3>1360</td></tr>
 <tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1340</td></tr>
 <tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>1320</td></tr>
 <tr><td><font size=3>Brandon McManus        </td><td><font size=3>1295</td></tr>
@@ -177,10 +177,10 @@
 <tr><td><font size=3>Riley Patterson        </td><td><font size=3>1210</td></tr>
 <tr><td><font size=3>Jason Sanders          </td><td><font size=3>1180</td></tr>
 <tr><td><font size=3>Matt Gay               </td><td><font size=3>1165</td></tr>
-<tr><td><font size=3>Evan McPherson         </td><td><font size=3>1145</td></tr>
 <tr><td><font size=3>Ryan Succop            </td><td><font size=3>1135</td></tr>
 <tr><td><font size=3>Greg Joseph            </td><td><font size=3>1120</td></tr>
 <tr><td><font size=3>Robbie Gould           </td><td><font size=3>1115</td></tr>
+<tr><td><font size=3>Evan McPherson         </td><td><font size=3>1115</td></tr>
 <tr><td><font size=3>Mike Badgley           </td><td><font size=3>1020</td></tr>
 <tr><td><font size=3>Joey Slye              </td><td><font size=3>1020</td></tr>
 <tr><td><font size=3>Wil Lutz               </td><td><font size=3> 990</td></tr>
@@ -189,9 +189,9 @@
 <tr><td><font size=3>Chris Boswell          </td><td><font size=3> 935</td></tr>
 <tr><td><font size=3>Cairo Santos           </td><td><font size=3> 935</td></tr>
 <tr><td><font size=3>Harrison Butker        </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 785</td></tr>
 <tr><td><font size=3>Jake Elliott           </td><td><font size=3> 755</td></tr>
 <tr><td><font size=3>Randy Bullock          </td><td><font size=3> 720</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 700</td></tr>
 <tr><td><font size=3>Matthew Wright         </td><td><font size=3> 665</td></tr>
 <tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Austin Seibert         </td><td><font size=3> 180</td></tr>
@@ -203,12 +203,12 @@
 <tr><td><font size=3>Ken Walker             </td><td><font size=3>1435</td></tr>
 <tr><td><font size=3>Christian Watson       </td><td><font size=3>1080</td></tr>
 <tr><td><font size=3>Cade York              </td><td><font size=3>1055</td></tr>
+<tr><td><font size=3>Brock Purdy            </td><td><font size=3>1035</td></tr>
 <tr><td><font size=3>Dameon Pierce          </td><td><font size=3> 805</td></tr>
 <tr><td><font size=3>Chris Olave            </td><td><font size=3> 795</td></tr>
 <tr><td><font size=3>Breece Hall            </td><td><font size=3> 790</td></tr>
 <tr><td><font size=3>Garrett Wilson         </td><td><font size=3> 775</td></tr>
 <tr><td><font size=3>Kenny Pickett          </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>Brock Purdy            </td><td><font size=3> 750</td></tr>
 <tr><td><font size=3>Jahan Dotson           </td><td><font size=3> 700</td></tr>
 <tr><td><font size=3>Tyler Allgeier         </td><td><font size=3> 675</td></tr>
 <tr><td><font size=3>Isiah Pacheco          </td><td><font size=3> 640</td></tr>
