--- a/board00.html
+++ b/board00.html
@@ -175,7 +175,7 @@
     <td>Robert<br>Chancey</td>
     <td>Shawn<br>Bryson</td>
     <td>Doug<br>Chapman</td>
-    <td>R<br>Jay Soward</td>
+    <td>R Jay<br>Soward</td>
     <td>JJ<br>Johnson</td>
     <td>Frank<br>Moreau</td>
     <td>Brett<br>Conway</td></tr>
